<resources>
    <string name="app_name">RMA_LV2</string>
    <string name="picture_of_the_person">Picture of the person</string>
    <string name="title">Inspirational People</string>
    <string name="name">Name</string>
    <string name="name_hint">A person\'s name</string>
    <string name="description_hint">What has this person done?</string>
    <string name="description">Description</string>
    <string name="picture">Picture</string>
    <string name="birth_date">Birth date</string>
    <string name="birth_hint">When was the person born?</string>
    <string name="browse">Browse For Image</string>
    <string name="add">Add</string>
    <string name="quote">Quote:</string>
    <string name="add_quote">Add Quote</string>
    <string name="quote_hint">What quote is this person famous for?</string>
    <string name="remove">Remove</string>
    <string name="add_new_person">Add New Person</string>
    <string name="grace_hopper_description">She was an American computer scientist and United States Navy rear admiral.[1] One of the first programmers of the Harvard Mark I computer, she was a pioneer of computer programming who invented one of the first linkers. Hopper was the first to devise the theory of machine-independent programming languages, and the FLOW-MATIC programming language she created using this theory was later extended to create COBOL, an early high-level programming language still in use today.</string>
    <string name="andre_ampere_description">He was a French physicist and mathematician who was one of the founders of the science of classical electromagnetism, which he referred to as "electrodynamics". He is also the inventor of numerous applications, such as the solenoid (a term coined by him) and the electrical telegraph. An autodidact, Ampère was a member of the French Academy of Sciences and professor at the École polytechnique and the Collège de France.</string>
    <string name="pythagoras_description">was an ancient Ionian Greek philosopher and the eponymous founder of Pythagoreanism. His political and religious teachings were well known in Magna Graecia and influenced the philosophies of Plato, Aristotle, and, through them, Western philosophy. Knowledge of his life is clouded by legend, but he appears to have been the son of Mnesarchus, a gem-engraver on the island of Samos. Modern scholars disagree regarding Pythagoras\'s education and influences, but they do agree that, around 530 BC, he travelled to Croton in southern Italy, where he founded a school in which initiates were sworn to secrecy and lived a communal, ascetic lifestyle. This lifestyle entailed a number of dietary prohibitions, traditionally said to have included vegetarianism, although modern scholars doubt that he ever advocated for complete vegetarianism.</string>
    <string name="add_person_error">Did you enter everything you had to?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>