<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPersonActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:autofillHints="@string/name_hint"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        tools:text="@tools:sample/lorem/random"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_description"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:autofillHints="@string/description_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        tools:text="@tools:sample/lorem/random"/>

    <TextView
        android:id="@+id/tv_picture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toBottomOf="@id/btn_browseImage"
        android:text="@string/picture"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_browseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_picture"
        app:layout_constraintStart_toEndOf="@id/tv_picture"
        android:text="@string/browse"/>

    <TextView
        android:id="@+id/tv_dateBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_dateBirth"
        app:layout_constraintTop_toBottomOf="@id/btn_browseImage"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:text="@string/birth_date"/>

    <EditText
        android:id="@+id/et_dateBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_dateBirth"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/btn_browseImage"
        app:layout_constraintBottom_toBottomOf="@id/tv_dateBirth"
        android:inputType="date"
        android:autofillHints="@string/birth_hint"/>

    <TextView
        android:id="@+id/tv_dateDeath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_dateDeath"
        app:layout_constraintTop_toBottomOf="@id/et_dateBirth"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:text="@string/birth_date"/>

    <EditText
        android:id="@+id/et_dateDeath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_dateDeath"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/et_dateBirth"
        app:layout_constraintBottom_toBottomOf="@id/tv_dateDeath"
        android:inputType="date"
        android:autofillHints="@string/birth_hint"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_quotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_dateDeath"
        app:layout_constraintBottom_toTopOf="@id/btn_addQuote"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        tools:listitem="@layout/item_quote"/>

    <EditText
        android:id="@+id/et_quote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/btn_addQuote"
        app:layout_constraintTop_toTopOf="@id/btn_addQuote"
        tools:text="@tools:sample/lorem/random"
        android:autofillHints="@string/quote_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_addQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_quote"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        android:text="@string/add_quote"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>